force-app/main/default/objects/Account/fields/SAPId__c.field-meta.xml
<CustomField>
    <fullName>SAPId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The &quot;SAP ID&quot; field in Salesforce CRM is a unique identifier used for seamless data synchronization between SAP and Salesforce systems, ensuring accurate mapping and linking of records. It facilitates efficient integration and reliable data exchange between the two platforms.</description>
    <externalId>true</externalId>
    <label>SAP Id</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>