force-app/main/default/objects/Account/fields/Segmentatietabel__c.field-meta.xml
<CustomField>
    <fullName>Segmentatietabel__c</fullName>
    <label>Segmentatietabel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Potentieel behouden</fullName>
            </value>
            <value>
                <fullName>Project Partner behouden</fullName>
            </value>
            <value>
                <fullName>Premium Potentieel behouden</fullName>
            </value>
            <value>
                <fullName>Premium Partner behouden</fullName>
            </value>
            <value>
                <fullName>Van Project Potentieel naar Premium Potentieel</fullName>
            </value>
            <value>
                <fullName>Van Project Potentieel naar Project Partner</fullName>
            </value>
            <value>
                <fullName>Van Project Potentieel naar Premium Partner</fullName>
            </value>
            <value>
                <fullName>Van Project Partner naar Premium Potentieel</fullName>
            </value>
            <value>
                <fullName>Van Project Partner naar Premium Partner</fullName>
            </value>
            <value>
                <fullName>Van Premium Potentieel naar Premium Partner</fullName>
            </value>
            <value>
                <fullName>Van Premium Potentieel naar Project Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>