force-app/main/default/objects/Account/fields/Sharing_Heijmans_Franki__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Heijmans_Franki__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account zichtbaar in database Heijmans en Franki</description>
    <inlineHelpText>Gezamenlijk gebruik: De account zichtbaar en bewerkbaar in database Heijmans en Franki.
Gemeinsame Nutzung: Dieses Account sichtbar und editierbar im Database Franki und Heijmans.</inlineHelpText>
    <label>Sharing Heijmans-Franki</label>
    <type>Checkbox</type>
</CustomField>