force-app/main/default/objects/Account/fields/Speerpunten__c.field-meta.xml
<CustomField>
    <fullName>Speerpunten__c</fullName>
    <inlineHelpText>Speerpunten klant</inlineHelpText>
    <label>Speerpunten</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>