force-app/main/default/objects/Account/fields/Strategisch_Accountmanager__c.field-meta.xml
<CustomField>
    <fullName>Strategisch_Accountmanager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deze wordt alleen ingevuld voor de TOP klanten van Heijmans. Dit is Heijmans breed</description>
    <inlineHelpText>Deze wordt alleen ingevuld voor de TOP klanten van Heijmans. Dit is Heijmans breed</inlineHelpText>
    <label>Strategisch Accountmanager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Strategisch Accountmanager)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>