force-app/main/default/objects/Account/fields/Subsector__c.field-meta.xml
<CustomField>
    <fullName>Subsector__c</fullName>
    <label>Subsector</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PrimarySectorPick__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z</fullName>
            </value>
            <value>
                <fullName>Agencies</fullName>
            </value>
            <value>
                <fullName>Provinces</fullName>
            </value>
            <value>
                <fullName>Municipalities</fullName>
            </value>
            <value>
                <fullName>Ministries</fullName>
            </value>
            <value>
                <fullName>Water Authorities</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Food &amp; Agri</fullName>
            </value>
            <value>
                <fullName>ICT-TMT</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Leisure</fullName>
            </value>
            <value>
                <fullName>Infra</fullName>
            </value>
            <value>
                <fullName>Housing Corporations</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Public Transport Providers</fullName>
            </value>
            <value>
                <fullName>X</fullName>
                <isActive>false</isActive>
                <label>X</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <isActive>false</isActive>
                <label>Y</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>