force-app/main/default/objects/Account/fields/testdata__c.field-meta.xml
<CustomField>
    <fullName>testdata__c</fullName>
    <inlineHelpText>is om te testen</inlineHelpText>
    <label>testdata</label>
    <type>Date</type>
</CustomField>