force-app/main/default/objects/Account/fields/Waarde_van__c.field-meta.xml
<CustomField>
    <fullName>Waarde_van__c</fullName>
    <description>Ranking Waarde van de Klant</description>
    <inlineHelpText>Classificatie Waarde van de Klant</inlineHelpText>
    <label>OUD Waarde van</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trede 0: suspect</fullName>
            </value>
            <value>
                <fullName>Trede 0: prospect</fullName>
            </value>
            <value>
                <fullName>Trede 1</fullName>
            </value>
            <value>
                <fullName>Trede 2</fullName>
            </value>
            <value>
                <fullName>Trede 3</fullName>
            </value>
            <value>
                <fullName>Trede 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>