force-app/main/default/objects/Account/fields/Waarde_voor__c.field-meta.xml
<CustomField>
    <fullName>Waarde_voor__c</fullName>
    <description>Ranking Waarde voor de Klant</description>
    <inlineHelpText>Classificatie Waarde voor de Klant</inlineHelpText>
    <label>OUD Waarde voor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trede 0: Suspect</fullName>
            </value>
            <value>
                <fullName>Trede 0: Prospect</fullName>
            </value>
            <value>
                <fullName>Trede 1</fullName>
            </value>
            <value>
                <fullName>Trede 2</fullName>
            </value>
            <value>
                <fullName>Trede 3</fullName>
            </value>
            <value>
                <fullName>Trede 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>