force-app/main/default/objects/Account/fields/Zugewiesen_an__c.field-meta.xml
<CustomField>
    <fullName>Zugewiesen_an__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zugewiesen an</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>startsWith</operation>
            <value>Franki</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Firmen (Zugewiesen an)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>