force-app/main/default/objects/Account/recordTypes/Franki.recordType-meta.xml
<RecordType>
    <fullName>Franki</fullName>
    <active>true</active>
    <label>Franki</label>
</RecordType>