force-app/main/default/objects/Account/recordTypes/Heijmans.recordType-meta.xml
<RecordType>
    <fullName>Heijmans</fullName>
    <active>true</active>
    <label>Heijmans</label>
</RecordType>