force-app/main/default/objects/Account/recordTypes/Heijmans_concurrent.recordType-meta.xml
<RecordType>
    <fullName>Heijmans_concurrent</fullName>
    <active>true</active>
    <description>Indien het account een concurrent is van een onderdeel van Heijmans</description>
    <label>Heijmans concurrent</label>
</RecordType>