force-app/main/default/objects/Account/recordTypes/Heijmans_klant.recordType-meta.xml
<RecordType>
    <fullName>Heijmans_klant</fullName>
    <active>true</active>
    <description>Indien het account een klant is van Heijmans</description>
    <label>Heijmans klant</label>
</RecordType>