force-app/main/default/objects/Account/recordTypes/Heijmans_onderdeel.recordType-meta.xml
<RecordType>
    <fullName>Heijmans_onderdeel</fullName>
    <active>false</active>
    <description>Indien het account een Heijmans onderdeel is</description>
    <label>Heijmans onderdeel</label>
</RecordType>