force-app/main/default/objects/Account/recordTypes/Heijmans_partner.recordType-meta.xml
<RecordType>
    <fullName>Heijmans_partner</fullName>
    <active>true</active>
    <description>Indien het account een partner/adviseur is van Heijmans</description>
    <label>Heijmans partner</label>
</RecordType>