force-app/main/default/objects/Account/listViews/All_Opdrachtgevers.listView-meta.xml
<ListView>
    <fullName>All_Opdrachtgevers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <label>All Opdrachtgevers</label>
    <language>en_US</language>
    <sharedTo>
        <group>Heijmans_Roles</group>
    </sharedTo>
</ListView>