force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Partner_sector__c</columns>
    <columns>Markt__c</columns>
    <columns>Focusklant__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle accounts</label>
</ListView>