force-app/main/default/objects/Account/listViews/Alle_Provincies.listView-meta.xml
<ListView>
    <fullName>Alle_Provincies</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Regio_Infra__c</columns>
    <columns>Accountmanager__c</columns>
    <columns>Strategisch_Accountmanager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>Provincie</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Heijmans_klant</value>
    </filters>
    <label>Alle Provincies</label>
</ListView>