force-app/main/default/objects/Account/listViews/Alle_Waterschappen.listView-meta.xml
<ListView>
    <fullName>Alle_Waterschappen</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>Regio_Infra__c</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>Accountmanager__c</columns>
    <columns>Strategisch_Accountmanager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>Waterschap</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Heijmans_klant</value>
    </filters>
    <label>Alle Waterschappen</label>
</ListView>