force-app/main/default/objects/Account/listViews/Focusklanten_Infra.listView-meta.xml
<ListView>
    <fullName>Focusklanten_Infra</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>Accountmanager__c</columns>
    <columns>Markt__c</columns>
    <columns>Focusklant__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>Regio_Infra__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Focusklant__c</field>
        <operation>includes</operation>
        <value>2021</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Heijmans_klant</value>
    </filters>
    <label>Focusklanten Infra</label>
    <sharedTo>
        <group>CMO_Business_Intelligence</group>
    </sharedTo>
</ListView>