force-app/main/default/objects/Account/listViews/Gemeente_Nijmegen.listView-meta.xml
<ListView>
    <fullName>Gemeente_Nijmegen</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Gemeente Nijmegen</label>
</ListView>