force-app/main/default/objects/Account/listViews/Gemeenten.listView-meta.xml
<ListView>
    <fullName>Gemeenten</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Regio_Infra__c</columns>
    <columns>Provincie__c</columns>
    <columns>Accountmanager__c</columns>
    <columns>Strategisch_Accountmanager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>Rijksoverheid,Defensie,Provincie,Gemeente,Waterschap</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Gemeente</value>
    </filters>
    <label>Gemeenten</label>
</ListView>