force-app/main/default/objects/Account/listViews/Heijmans.listView-meta.xml
<ListView>
    <fullName>Heijmans</fullName>
    <booleanFilter>1 or 2</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Klantgroep__c</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Heijmans</value>
    </filters>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>Heijmans Infra,Heijmans NV</value>
    </filters>
    <label>Heijmans</label>
    <language>en_US</language>
    <sharedTo>
        <group>Beheerders294001</group>
    </sharedTo>
</ListView>