force-app/main/default/objects/Account/listViews/Overheid_Midden_Oost.listView-meta.xml
<ListView>
    <fullName>Overheid_Midden_Oost</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Regio_Infra__c</columns>
    <columns>Provincie__c</columns>
    <columns>Accountmanager__c</columns>
    <columns>Strategisch_Accountmanager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>Rijksoverheid,Defensie,Provincie,Gemeente,Waterschap</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Heijmans_klant</value>
    </filters>
    <filters>
        <field>Regio_Infra__c</field>
        <operation>includes</operation>
        <value>Midden Oost</value>
    </filters>
    <label>Overheid Midden Oost</label>
</ListView>