force-app/main/default/objects/Account/listViews/Overheid_Rijk.listView-meta.xml
<ListView>
    <fullName>Overheid_Rijk</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Regio_Infra__c</columns>
    <columns>Provincie__c</columns>
    <columns>Accountmanager__c</columns>
    <columns>Strategisch_Accountmanager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>Rijksoverheid,Defensie</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Heijmans_klant</value>
    </filters>
    <label>Overheid Rijk</label>
</ListView>