force-app/main/default/objects/Account/listViews/Partners_Civiel_en_GWW.listView-meta.xml
<ListView>
    <fullName>Partners_Civiel_en_GWW</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Accountmanager__c</columns>
    <columns>Partner_sector__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Preferred__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partner_sector__c</field>
        <operation>equals</operation>
        <value>Civiel,Civiel MKB,GWW</value>
    </filters>
    <label>Partners Civiel en GWW</label>
</ListView>